# pt-three-ways

./: CMakeLists.txt  conanfile.txt
src/main/: Progressifier.cpp  Progressifier.h  WorkQueue.h  main.cpp
src/math/: CMakeLists.txt  Camera.h  CeSupt.h  OrthoNormalBasis.cpp  OrthoNormalBasis.h  Ray.h  Sphere.h  Vec3.h
src/oo/: Material.h  Primitive.cpp  Primitive.h  Scene.h
test/math/: OrthoNormalBasisTests.cpp
